Sets up CI actions

--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite dev",
+    "build-storybook": "storybook build",
     "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "svelte-kit sync || echo ''",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "coverage": "vitest run --coverage",
+    "dev": "vite dev",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "test:unit": "vitest",
-    "test": "npm run test:unit -- --run && npm run test:e2e",
-    "test:e2e": "playwright test",
+    "prepare": "svelte-kit sync || echo ''",
+    "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test:e2e": "vitest run --project=client && playwright test --project=firefox",
+    "test:unit": "vitest run --project=server",
+    "test": "npm run test:unit -- --run && npm run test:e2e",
+    "typecheck": "vitest typecheck"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
