--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install playwright browser
         run: npx playwright install firefox
       - name: Execute unit tests
-        run: bun test:unit
+        run: bun test:unit -- --run
       - name: Execute browser tests
         run: bun test:e2e
   lint:
@@ -53,7 +53,7 @@ jobs:
       - name: Prepare svelte-kit
         run: bun prepare
       - name: Run linter
-        run: bun prettier --check .
+        run: bun lint
   check:
     name: Check
     runs-on: ubuntu-latest
