Adds svelte meta tags package

--- a/package.json
+++ b/package.json
@@ -37,22 +37,23 @@
     "@types/node": "^22",
     "@vitest/browser-playwright": "^4.0.15",
     "@vitest/coverage-v8": "^4.0.15",
-    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-storybook": "^10.1.9",
     "eslint-plugin-svelte": "^3.13.1",
+    "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "playwright": "^1.57.0",
-    "prettier": "^3.7.4",
     "prettier-plugin-svelte": "^3.4.0",
+    "prettier": "^3.7.4",
     "storybook": "^10.1.9",
-    "svelte": "^5.45.6",
     "svelte-adapter-bun": "^1.0.1",
     "svelte-check": "^4.3.4",
-    "typescript": "^5.9.3",
+    "svelte-meta-tags": "^4.5.0",
+    "svelte": "^5.45.6",
     "typescript-eslint": "^8.48.1",
+    "typescript": "^5.9.3",
     "vite": "^7.2.6",
-    "vitest": "^4.0.15",
-    "vitest-browser-svelte": "^2.0.1"
+    "vitest-browser-svelte": "^2.0.1",
+    "vitest": "^4.0.15"
   }
 }
